--- a/lesson04/assignment/package.json
+++ b/lesson04/assignment/package.json
@@ -9,12 +9,17 @@
     "author": "UW Front End Cert Program",
     "license": "ISC",
     "devDependencies": {
-        "browser-sync": "^2.26.13",
+        "browser-sync": "^2.27.10",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "6.1.0",
         "gulp-clean-css": "^4.3.0",
         "gulp-plumber": "1.2.0",
-        "gulp-sass": "^4.1.0",
+        "gulp-sass": "^5.1.0",
         "gulp-util": "3.0.8"
+    },
+    "dependencies": {
+        "commander": "^9.4.0",
+        "express": "^4.18.1",
+        "node-sass-middleware": "^1.0.1"
     }
 }
