--- a/lesson09/activity/starter/apis/package.json
+++ b/lesson09/activity/starter/apis/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.4.1",
     "nuxt": "^2.0.0",
-    "push-dir": "^0.4.1"
-  },
+    "push-dir": "^0.4.1",
+    "yarn": "1.22.19"
+    },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^4.19.1",
